-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u251, jfx15
-
Component/s: javafx
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8242675 | jfx14 | Guru Hb | P2 | Resolved | Fixed | |
| JDK-8241179 | jfx11.0.7 | Guru Hb | P2 | Resolved | Fixed | |
| JDK-8238651 | 8u261 | Guru Hb | P2 | Resolved | Fixed | b01 |
| JDK-8238764 | 8u251 | Guru Hb | P2 | Closed | Fixed | b04 |
- backported by
-
JDK-8238651 Cherry pick GTK WebKit 2.26.3 changes
-
- Resolved
-
-
JDK-8241179 Cherry pick GTK WebKit 2.26.3 changes
-
- Resolved
-
-
JDK-8242675 Cherry pick GTK WebKit 2.26.3 changes
-
- Resolved
-
-
JDK-8238764 Cherry pick GTK WebKit 2.26.3 changes
-
- Closed
-
- relates to
-
JDK-8233942 Update to 609.1 version of WebKit
-
- Resolved
-
(2 links to)