8238526: Cherry pick GTK WebKit 2.26.3 changes

Reviewed-by: kcr, jvos